objects/SO_Enquiry__c.object
<CustomObject>
    <description>Capture details of an initial sales enquiry.

Utilised by: SVO | Classic</description>
    <label>Enquiry</label>
    <nameField>
        <displayFormat>ENQ-{00000000}</displayFormat>
        <label>Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Age__c</fullName>
        <formula>IF(ISBLANK(SO_Close_Date__c),TODAY()-DATEVALUE(CreatedDate),SO_Close_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Manufacturer__c.Name</field>
                <operation>equals</operation>
                <value>Jaguar,Land Rover,Daimler</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
            <errorMessage>Selected Model doesn&apos;t belong to the Brand</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Classic Sales, Classic Service</value>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_JLR_Classic__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SVO Bespoke, SVO Private Office</value>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_Available_SVO__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Stage__c</fullName>
        <label>Enquiry Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Client_Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Sales_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Markets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <description>SO e2a - Field to capture Thread ID for tracking email chain</description>
        <formula>&quot;Ref&quot; &amp;
SUBSTITUTE(
IF(MID($Organization.Id, 8, 1) = &quot;0&quot;,
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp;
&quot;.&quot; &amp;
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;),
&quot;{&quot; &amp; LEFT($Organization.Id, 7) &amp; &quot;.&quot; &amp; RIGHT($Organization.Id, 8) &amp; &quot;}&quot;
)
&amp;
IF(MID(Id, 8, 1) = &quot;0&quot;,
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT(Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp;
&quot;.&quot; &amp;
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT(Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;),
&quot;{&quot; &amp; LEFT(Id, 7) &amp; &quot;.&quot; &amp; RIGHT(Id, 8) &amp; &quot;}&quot;
),
&quot;}{&quot;, &quot;:&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Preferred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Details__c</fullName>
        <label>Request Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Subject__c</fullName>
        <label>Enquiry Title</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
            <filterItems>
                <field>$Source.SO_Body_Style__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Body_Style__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Body_Style__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Series_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Retailer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Preferred Retailer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Retailer Account, NSC/Importer, JLR Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enquiries (Retailer)</relationshipLabel>
        <relationshipName>Retailer_Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A programme is a category of product offering, such as Reborn or Continuation.</inlineHelpText>
        <label>Programme</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Programme__c.SO_Product_Offering__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Product_Offering__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Programme__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Style</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>Selected Body style doesn&apos;t belong to the Model/Series</errorMessage>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Body_Style__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Derivative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Derivative</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Derivative doesn&apos;t belong to the Series</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Derivative__c.SO_Vehicle_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Derivative__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_SLA_Status__c</fullName>
        <formula>If((SO_Trigger_SLA__c == FALSE || (NOT(ISBLANK(SO_SLA_First_Contact_Complete__c )) &amp;&amp; (SO_SLA_First_Contact_Complete__c &lt; SO_SLA_First_Contact_Target__c))), &quot;Success&quot; ,
If((ISBLANK(SO_SLA_First_Contact_Complete__c ) &amp;&amp; (NOW() &lt; SO_SLA_First_Contact_Target__c)), &quot;In Progress&quot;,
&quot;Failed&quot;))</formula>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Sales_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Source_KMI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source KMI</label>
        <referenceTo>SO_KMI__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Series is not valid for the selected Model.</errorMessage>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>SO_Vehicle_Series__c.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>Enquiries</relationshipLabel>
        <relationshipName>Enquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Trigger_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger when the SLA should be calculated; Default &apos;FALSE&apos;; Turned &apos;True&apos; when a new Enquiry is created in &apos;Initial Enquiry&apos; or &apos;New&apos; stage</description>
        <label>Trigger SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Closed_State__c</fullName>
        <label>Closed State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <label>Qualified - Opportunity</label>
                </value>
                <value>
                    <fullName>Qualified - KMI</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                    <label>Closed (Lost)</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Env_Base_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO_Env_Base_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Type_of_Sale__c</fullName>
        <label>Type of Sale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Product_Offering__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Type_of_Sale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Business_Unit__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
   &apos;SO_Classic_Sales&apos;, &apos;Classic Sales&apos;,
   &apos;SO_Classic_Service&apos;, &apos;Classic Service&apos;,
   &apos;SO_Bespoke&apos;,&apos;SVO Bespoke&apos;,
   &apos;SO_VIP&apos;,&apos;SVO Private Office&apos;,
   &apos;&apos;
)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Closed_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Retailer</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Product - not offered</fullName>
                </value>
                <value>
                    <fullName>Product - unfeasible request</fullName>
                </value>
                <value>
                    <fullName>Product - no longer available</fullName>
                </value>
                <value>
                    <fullName>Purchase deferred</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Lead time</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Competition - Aftermarket Third Party</fullName>
                </value>
                <value>
                    <fullName>Affordability</fullName>
                </value>
                <value>
                    <fullName>No longer purchasing</fullName>
                </value>
                <value>
                    <fullName>Not qualified</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Technical Help only</fullName>
                </value>
                <value>
                    <fullName>Enquiry Transferred to Essen</fullName>
                </value>
                <value>
                    <fullName>Bespoke Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Bespoke Opportunity</label>
                </value>
                <value>
                    <fullName>Classic Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Classic Opportunity</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Exterior Only</fullName>
                    <isActive>false</isActive>
                    <label>Exterior Only</label>
                </value>
                <value>
                    <fullName>Full Bespoke</fullName>
                    <isActive>false</isActive>
                    <label>Full Bespoke</label>
                </value>
                <value>
                    <fullName>Full Remote Bespoke</fullName>
                    <isActive>false</isActive>
                    <label>Full Remote Bespoke</label>
                </value>
                <value>
                    <fullName>Interior Only</fullName>
                    <isActive>false</isActive>
                    <label>Interior Only</label>
                </value>
                <value>
                    <fullName>Paint Only</fullName>
                    <isActive>false</isActive>
                    <label>Paint Only</label>
                </value>
                <value>
                    <fullName>VIP Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>VIP Opportunity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <label>Hand of Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Hand_of_Drive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Enquiry_Rating__c</fullName>
        <label>Enquiry Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Enquiry_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Inbound_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Received_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Production_Year__c</fullName>
        <label>Production Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Customer_Contact__c</fullName>
        <description>Communications status with the customers</description>
        <label>Customer Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Product_Offering</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_SLA_Kickoff_date__c</fullName>
        <formula>IF( WEEKDAY(DATEVALUE(CreatedDate)) == 6 &amp;&amp; HOUR(TIMEVALUE(CreatedDate)) &gt; 17 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 3)) &amp; &quot; 08:00:00&quot;), 
		IF(WEEKDAY(DATEVALUE(CreatedDate)) == 7 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 2)) &amp; &quot; 08:00:00&quot;), 
			IF((WEEKDAY(DATEVALUE(CreatedDate)) == 1 || HOUR(TIMEVALUE(CreatedDate)) &gt; 17 ), DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 1)) &amp; &quot; 08:00:00&quot;), 
				IF(HOUR(TIMEVALUE(CreatedDate)) &lt; 8 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate )) &amp; &quot; 08:00:00&quot;), CreatedDate) )	)	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA - Kickoff date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_SLA_Status_image__c</fullName>
        <formula>If((SO_Trigger_SLA__c == FALSE || (NOT(ISBLANK(SO_SLA_First_Contact_Complete__c )) &amp;&amp; (SO_SLA_First_Contact_Complete__c &lt; SO_SLA_First_Contact_Target__c))), IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; $Label.SO_SLA_Success_Image,&apos;Success&apos;,35,98) , 
If((ISBLANK(SO_SLA_First_Contact_Complete__c ) &amp;&amp; (NOW() &lt; SO_SLA_First_Contact_Target__c)), IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; $Label.SO_SLA_In_Progress_Image,&apos;In Progress&apos;,35,98), 
IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; $Label.SO_SLA_Failed_Image,&apos;Failed&apos;,35,98)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_SLA_In_Queue_Target__c</fullName>
        <label>SLA - In Queue Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Originating_Division__c</fullName>
        <label>Originating Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Special_Operations_Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Model_with_Derivative__c</fullName>
        <formula>SO_Model__r.Name &amp; &quot; (&quot; &amp;  SO_Series_Name__r.Name  &amp;&quot;) &quot; &amp; SO_Derivative__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model with Derivative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_SLA_Escalation_Target__c</fullName>
        <label>SLA - Escalation Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Spec_Details__c</fullName>
        <label>Additional Spec Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Primary_Exterior_Colour__c</fullName>
        <label>Primary Exterior Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Primary_Exterior_Colour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>So_first_24_hours_reminder__c</fullName>
        <formula>IF( WEEKDAY(DATEVALUE(CreatedDate)) == 6,CreatedDate+3,
IF( WEEKDAY(DATEVALUE(CreatedDate)) == 6 &amp;&amp; HOUR(TIMEVALUE(CreatedDate)) &gt; 17 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 3)) &amp; &quot; 08:00:00&quot;)+(24/24), 
IF(WEEKDAY(DATEVALUE(CreatedDate)) == 7 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 2)) &amp; &quot; 08:00:00&quot;)+(24/24), 
IF((WEEKDAY(DATEVALUE(CreatedDate)) == 1 || HOUR(TIMEVALUE(CreatedDate)) &gt; 17 ), DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 1)) &amp; &quot; 08:00:00&quot;)+(24/24), 
IF(HOUR(TIMEVALUE(CreatedDate)) &lt; 8 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate )) &amp; &quot; 08:00:00&quot;)+(24/24),
IF(HOUR(TIMEVALUE(CreatedDate)) &gt; 17 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 1)) &amp; &quot; 08:00:00&quot;)+(24/24),
 CreatedDate+(24/24)) )	) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>first 24 hours reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_SLA_First_Contact_Target__c</fullName>
        <label>SLA - First Contact Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Paint_Requirements__c</fullName>
        <label>Bespoke Paint Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_SLA_First_Contact_Complete__c</fullName>
        <description>This is the date and time that first contact is attempted with the preferred Contact.</description>
        <label>SLA - First Contact Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Exterior_Requirements__c</fullName>
        <label>Bespoke Exterior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Interior_Requirements__c</fullName>
        <label>Bespoke Interior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_SLA_Escalation_Reminder_Target__c</fullName>
        <label>SLA - Escalation Reminder Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_SLA_First_Contact_Hours_Remaining__c</fullName>
        <description>Number of Hours remaining to meet the First Contact SLA for incomplete SLAs</description>
        <formula>IF((ISBLANK(SO_SLA_First_Contact_Complete__c) &amp;&amp; SO_Trigger_SLA__c == TRUE) , 
IF( SO_SLA_First_Contact_Target__c - NOW() &gt; 0 ,
  TEXT( FLOOR( SO_SLA_First_Contact_Target__c - NOW() ) ) 
  &amp; If(TEXT( FLOOR( SO_SLA_First_Contact_Target__c - NOW() ) ) == &quot;1&quot;,&quot; day &quot;,&quot; days &quot;)
  &amp; TEXT( FLOOR( MOD( (SO_SLA_First_Contact_Target__c - NOW() ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (SO_SLA_First_Contact_Target__c - NOW() ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  TEXT( FLOOR( SO_SLA_First_Contact_Target__c - NOW() ) ) &amp; &quot; days &quot;
),&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA - First Contact - Time Remaining</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SO_VIP</fullName>
        <active>true</active>
        <description>Capture enquiry details for a potential SVO Private Office sales opportunity.</description>
        <label>SVO Private Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Bespoke</fullName>
        <active>true</active>
        <description>Capture enquiry details for a potential SVO Bespoke sales opportunity.</description>
        <label>SVO Bespoke</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Classic_Sales</fullName>
        <active>true</active>
        <description>Capture enquiry details for a potential Classic Sales Opportunity.</description>
        <label>Classic Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Classic_Service</fullName>
        <active>true</active>
        <description>Capture enquiry details for a potential Classic Service Opportunity.</description>
        <label>Classic Service</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_New_to_Contacted</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; (
ISBLANK(SO_SLA_First_Contact_Complete__c)) &amp;&amp;
(ISPICKVAL(SO_Stage__c, &apos;Contacted&apos;) ||
 ISPICKVAL(SO_Stage__c, &apos;Discovery&apos;) ||
(ISPICKVAL(SO_Stage__c, &apos;Closed&apos;) &amp;&amp; (
ISPICKVAL( SO_Closed_State__c , &apos;Qualified&apos;) ||
ISPICKVAL( SO_Closed_State__c , &apos;Qualified - KMI&apos;)
)
)
) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorMessage>You must have recorded your contact activity. Please create a log of your activity to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Mandate_Closed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; ISPICKVAL(SO_Closed_State__c,&apos;Not Qualified&apos;) &amp;&amp; ISBLANK(TEXT(SO_Closed_Reason__c))</errorConditionFormula>
        <errorDisplayField>SO_Closed_Reason__c</errorDisplayField>
        <errorMessage>Please enter Closed Reason for Not Qualified Enquiry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Contacted_to_Discovery</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; (
ISBLANK(SO_Contact__c)) &amp;&amp;
 (ISPICKVAL(SO_Stage__c, &apos;Discovery&apos;) ||
  (ISPICKVAL(SO_Stage__c, &apos;Closed&apos;) &amp;&amp; (
    ISPICKVAL( SO_Closed_State__c , &apos;Qualified&apos;) ||
    ISPICKVAL( SO_Closed_State__c , &apos;Qualified - KMI&apos;)
   )
  )
) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorMessage>Please select the contact in the Contact Details section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_if_Qualified</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; ISPICKVAL(PRIORVALUE(SO_Closed_State__c),&apos;Qualified&apos;) &amp;&amp;
(
ISCHANGED(SO_Closed_State__c ) ||
ISCHANGED(SO_Closed_Reason__c) ||
ISCHANGED(SO_Retailer__c) ||
ISCHANGED(SO_Region__c) ||
ISCHANGED(SO_Brand__c) ||
ISCHANGED(SO_Model__c) ||
ISCHANGED(SO_Sales_Area__c) ||
ISCHANGED(SO_Market__c) ||
ISCHANGED(SO_Originating_Division__c)
)</errorConditionFormula>
        <errorMessage>You cannot change the enquiry once qualified.</errorMessage>
    </validationRules>
</CustomObject>